# obs-plugin

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  buildspec.json  resources.qrc
.circleci/: config.yaml  config.yml
.github/workflows/: build-macos-apple-silicon.yml  build-macos-intel.yml  build-macos-reusable.yml  build-windows.yml
build_macos/: CMakeCache.txt  ccache-launcher-c  ccache-launcher-cxx  cmake_install.cmake  create-package.cmake  distribution  plugin-support.c
build_macos/.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake
build_macos/CMakeScripts/: ReRunCMake.make
build_macos/Debug/obs-plugintemplate.plugin/Contents/: Info.plist
build_macos/Debug/obs-plugintemplate.plugin/Contents/MacOS/: obs-plugintemplate
build_macos/obs-plugintemplate.xcodeproj/: project.pbxproj
build_macos/obs-plugintemplate.xcodeproj/project.xcworkspace/xcuserdata/zhuyu.xcuserdatad/: UserInterfaceState.xcuserstate
build_macos/obs-plugintemplate.xcodeproj/xcuserdata/zhuyu.xcuserdatad/xcschemes/: xcschememanagement.plist
build_macos/obs-plugintemplate_autogen/: moc_predefs_Debug.h
cmake/: FindCEF.cmake  FindWrapOpenGL.cmake
cmake/common/: buildnumber.cmake  buildspec_common.cmake
cmake/macos/: buildspec.cmake
cmake/windows/: buildspec.cmake
data/: meta_JP.json  meta_TW.json  meta_US.json
data/locale/: en-US.ini  ja-JP.ini  zh-CN.ini  zh-TW.ini
docs/: build.md
package/: readme.md
package/macOS/: readme.md
package/macOS/misc/: postinstall
package/windows/: build-installer.ps1  build.bat  installer.nsi  nsis-config.nsh  readme.md
package/windows/Obs17Live_Windows_x64_Installer/: Obs17Live_Windows_x64_Installer.sln
package/windows/Obs17Live_Windows_x64_Installer/Obs17Live_Windows_x64_Installer/: Folders.wxs  Obs17Live_Windows_x64_Installer.wixproj  Obs17livePlugin.wxs  Package.ja-jp.wxl  Package.wxs  Package.zh-tw.wxl  WixUI_InstallDir.wxs
src/: 17live-api.hpp  17live-chat-dock.cpp  17live-chat-dock.hpp  17live-stream-settings.cpp  17live-stream-settings.hpp  plugin-main.cpp  plugin-support.c.in  plugin-support.h
src/17live/: CefDummy.cpp  CefDummy.hpp  OneSevenLiveConfigManager.cpp  OneSevenLiveConfigManager.hpp  OneSevenLiveCoreManager.cpp  OneSevenLiveCoreManager.hpp  OneSevenLiveCustomEventDialog.cpp  OneSevenLiveCustomEventDialog.hpp  OneSevenLiveHttpServer.cpp  OneSevenLiveHttpServer.hpp  OneSevenLiveLoginDialog.cpp  OneSevenLiveLoginDialog.hpp  OneSevenLiveMenuManager.cpp  OneSevenLiveMenuManager.hpp  OneSevenLiveRockViewerItem.cpp  OneSevenLiveRockViewerItem.hpp  OneSevenLiveRockZoneDock.cpp  OneSevenLiveRockZoneDock.hpp  OneSevenLiveStreamListDock.cpp  OneSevenLiveStreamListDock.hpp  OneSevenLiveStreamListItem.cpp  OneSevenLiveStreamListItem.hpp  OneSevenLiveStreamingDock.cpp  OneSevenLiveStreamingDock.hpp  OneSevenLiveUpdateManager.cpp  OneSevenLiveUpdateManager.hpp  OneSevenLiveUserDialog.cpp  OneSevenLiveUserDialog.hpp  QCefView.cpp  QCefView.hpp  SimpleCefClient.cpp  SimpleCefClient.hpp
src/17live/api/: OneSevenLiveApiWrappers.cpp  OneSevenLiveApiWrappers.hpp  OneSevenLiveModels.cpp  OneSevenLiveModels.hpp  OneSevenLiveUtility.cpp  OneSevenLiveUtility.hpp
src/17live/utility/: Common.cpp  Common.hpp  CustomCalendarWidget.cpp  CustomCalendarWidget.hpp  DownloadWorker.cpp  DownloadWorker.hpp  Meta.cpp  Meta.hpp  NetworkDiagnostics.cpp  NetworkDiagnostics.hpp  RemoteTextThread.cpp  RemoteTextThread.hpp  curl-helper.h
src/chat/: index.html
test/: test_plugin_main.c
web/ably_chat/: README.md  jsconfig.json  next.config.mjs  package-lock.json  package.json
web/ably_chat/messages/: en.d.json.ts  en.json  ja.json  zh.json
web/ably_chat/scripts/: remove-mock.js
web/ably_chat/src/: middleware.js
web/ably_chat/src/api/: auth.js  gifts.js  index.js  room.js
web/ably_chat/src/app/[locale]/: Ably.jsx  layout.js  page.js
web/ably_chat/src/i18n/: routing.js
web/ably_chat/src/lib/: BadgeImage.jsx  Box.jsx  Chat.jsx  ChatListWrapper.jsx  ChatUserName.jsx  ChatUserNameWithNameCard.jsx  ChatWrapper.jsx  CheckingLevel.jsx  CheckingLevelBadge.jsx  CommentFrameCandyCane.jsx  CommentFrameGradient.jsx  CommentFrameMetal.jsx  CommentFrameWrapper.jsx  GiftIcon.jsx  GiftItem.jsx  IcSuperfanLevel.jsx  IconWrapper.js  IncentiveSuperfanBadge.jsx  InnerWrapper.jsx  LevelBadge.jsx  LevelBadgeBase.jsx  LevelIcon.jsx  LevelIconBadge.jsx  Multiline.jsx  PokeItem.jsx  SVG.jsx  StreamerPicture.js  constants.js  hooks.js  utils.js
web/ably_chat/src/util/: getAblyDecodeData.js  getChatProps.js
